# bookshelf-backend

./: Cargo.toml  Dockerfile  configuration.yaml  notes.md  spec.yaml  sqlx-data.json
migrations/: 20201230210508_create_users_table.sql
scripts/: init-db.sh
src/: configuration.rs  lib.rs  main.rs
src/routes/: mod.rs
