[package]
name = "bookshelf-backend"
version = "0.1.0"
authors = ["SachinMaharana <sachin.nicky@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
anyhow = "1.0.37"
config = "0.10.1"
serde = "1.0.118"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.19"
serde-aux = "2.1.0"

[dependencies.sqlx]
version = "0.4.1"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]
